third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/two-equals-1.stderr
TOML parse error at line 1, column 6
  |
1 | key= = 1
  |      ^
invalid string
expected `"`, `'`
